# JuThesis-python-pytest

./: .gitignore  config.yaml  pyproject.toml  run_pipeline.py
JuThesis-python-pytest/: git_analyzer.py  scanner.py
JuThesis_pytest/: config.py  coverage_analyzer.py  duration_collector.py  git_analyzer.py  orchestrator.py  protocol_builder.py  pytest_runner.py  scanner.py
sample_project/: conftest.py  pytest.ini
sample_project/src/: module_a.py  module_b.py  module_c.py
sample_project/tests/: test_module_a.py  test_module_b.py  test_module_c.py
