[tool.poetry]
name = "JuThesis-python-pytest"
version = "1.0.0"
description = "Python-pytest plugin for JuThesis"
authors = ["unknown_name <unknown_email>"]
readme = "README.md"
packages = [{ include = "JuThesis-python-pytest" }]

[tool.poetry.dependencies]
python = "^3.10"
juthesis = "^1.0.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
